# othellogpt-deconstruction

./: .gitignore  README.md  pyproject.toml  run_experiments.sh  trichrome-othello.txt
mingpt/: pyproject.toml
reports/: 0-summary.md  1-transposition-distribution-divergence.md  2-trichrome-intervention.md  3-nanda-world-model-attack.md  4-semantic-sensitivity.md  5-ss-paper-summary.md
scripts/: board_flip_intervention_test.py  board_flip_lookup_test.py  board_flip_world_model_test.py  compute_statistics.py  eval_muse_alignment.py  eval_representation_alignment.py  extract_distributions.py  extract_gpt_board_predictor_embeddings.py  extract_gpt_gpt_embeddings.py  extract_muse_embeddings.py  extract_muse_gpt_gpt.py  find_transpositions.py  generate_ss_pairs.py  hf_ss_test.py  li_intervention_test.py  li_unnatural_test.py  nanda_experiment.py  nanda_intervention.py  nanda_world_model_test.py  negation_eval.py  negation_eval_all.sh  negation_finetune.py  negation_pipeline.sh  negation_prepare.py  negation_train.py  probe_flip_analysis.py  probe_gradient_steering_test.py  probe_gradient_steering_unreachable_test.py  semantic_sensitivity_llm_test.py  split_corpus.py  train_board_predictor.py  train_board_probes.py  train_trichrome_probes.py  trichrome_intervention.py  trichrome_probe_intervention.py
scripts/gpt2_sentiment/: label_vocab_sentiment.py  sentiment_intervention.py  train_sentiment_probes.py
src/othellogpt_deconstruction/analysis/: correlations.py  metrics.py  semantic_sensitivity.py  transpositions.py
src/othellogpt_deconstruction/core/: board.py  corpus.py  tokenizer.py  trichrome.py
src/othellogpt_deconstruction/intervention/: hooks.py
src/othellogpt_deconstruction/model/: board_probe.py  inference.py  probe_intervention.py  probes.py  representation_alignment.py  utils.py
tests/analysis/: test_correlations.py  test_metrics.py  test_semantic_sensitivity.py  test_transpositions.py
tests/core/: test_board.py  test_corpus.py  test_tokenizer.py  test_trichrome.py
tests/intervention/: test_hooks.py
tests/model/: test_inference.py  test_probe_intervention.py  test_probes.py  test_representation_alignment.py  test_utils.py
