[project]
name = "othello-gpt-deconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mingpt",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.3",
    "psutil>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/othellogpt_deconstruction"]

[tool.uv.sources]
mingpt = { path = "mingpt", editable = true }

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "pytest",
    "ruff",
]

[tool.ruff.lint]
select = ["F401"]
